--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "root",
+  "version": "1.1.1",
+  "name": "umi-lib-paik",
+  "private": false,
+  "scripts": {
+    "build":"node ./scripts/build.js",
+    "publish": "node ./scripts/publish.js --no-git-tag-version --no-push"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-modules-amd": "^7.1.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/plugin-transform-modules-umd": "^7.1.0",
+    "@babel/plugin-proposal-export-default-from":"^7.0.0",
+    "@babel/plugin-proposal-do-expressions":"^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-transform-modules-amd":"^7.1.0",
-    "@babel/plugin-transform-modules-commonjs":"^7.1.0",
-    "@babel/plugin-transform-modules-umd":"^7.1.0",
     "babel-eslint": "^10.0.1",
     "better-npm-run": "^0.1.1",
     "eslint": "^5.9.0",
@@ -19,6 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "lerna": "^3.4.3"
+    "lerna": "^3.4.3",
+    "shelljs": "^0.8.3",
+    "mkdirp":"^0.5.1"
   }
 }
