--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-locale-paik",
-  "version": "2.3.10-alpha.0",
+  "version": "2.3.5",
   "description": "A umi plugin for provide internationalization function.",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
@@ -42,6 +42,7 @@
     ]
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
