--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "3.4.3",
-  "npmClient": "npm",
+  "npmClient": "yarn",
   "version": "independent",
   "packages": [
     "packages/*"
