--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": false,
   "scripts": {
     "build":"node ./scripts/build.js",
-    "publish": "node ./scripts/publish.js --no-git-tag-version --no-push"
+    "publish": "node ./scripts/publish.js",
+    "publish:hard": "node ./scripts/publish.js --no-git-tag-version --no-push"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
