--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-locale-paik",
-  "version": "2.3.8",
+  "version": "2.3.9",
   "description": "A umi plugin for provide internationalization function.",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
@@ -31,12 +31,12 @@
   "dependencies": {
     "antd": "3.x",
     "intl": "^1.2.5",
+    "lodash.groupby": "^4.6.0",
     "moment": "2.x",
     "mustache": "^2.3.0",
     "prop-types": "^15.6.2",
     "react-intl": "^2.4.0",
-    "umi-utils": "^1.2.1",
-    "lodash.groupby": "^4.6.0"
+    "umi-utils": "^1.2.1"
   },
   "umiTools": {
     "browserFiles": [
