--- a/packages/stylelint-config-onpaik/package.json
+++ b/packages/stylelint-config-onpaik/package.json
@@ -19,5 +19,9 @@
     "stylelint-config-idiomatic-order": "^6.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
