--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,45 @@
 {
-  "parser": "babel-eslint",
   "extends": [
-    "airbnb",
-    "prettier"
+    "prettier",
+    "onpaik"
   ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
   "env": {
+    "es6": true,
     "browser": true,
+    "node": true,
     "jest": true
   },
-  "rules": {},
-  "plugins":[
-    "babel",
-    "import",
-    "prettier",
-    "react"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
+  "rules": {
+    "consistent-return": "off",
+    "jsx-a11y/anchor-is-valid":"off",
+    "comma-dangle":"off",
+    "semi":"off",
+    "jsx-a11y/href-no-hash": [0],
+    "react/react-in-jsx-scope":"off",
+    "react/prop-types":"off",
+    "react/destructuring-assignment":"off"
+  },
+  "globals": {
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": {
+          "resolve": {
+            "extensions": ["", ".js", ".jsx"],
+            "modules": ["src", ".", "node_modules"]
+          }
+        }
+      }
     }
   }
 }
