--- a/packages/eslint-config-onpaik/package.json
+++ b/packages/eslint-config-onpaik/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-eslint": "10.0.1",
     "eslint": "^5.9.0",
+    "prettier":"^1.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-babel": "^5.3.0",
