--- a/packages/eslint-config-onpaik/package.json
+++ b/packages/eslint-config-onpaik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-onpaik",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "This package provides .eslintrc config based on eslint-config-airbnb.",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,6 @@
   "dependencies": {
     "babel-eslint": "10.0.1",
     "eslint": "^5.10.0",
-    "prettier":"^1.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -30,7 +29,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "lint-staged": "^8.1.0"
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3"
   },
   "publishConfig": {
     "access": "public",
