--- a/packages/umi-lib-paik/package.json
+++ b/packages/umi-lib-paik/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "react":"^16.6.3",
     "react-intl":"^2.7.2",
-    "hoist-non-react-statics":"^3.2.1"
+    "hoist-non-react-statics":"^3.2.1",
+    "invariant":"^2.2.4"
   },
   "publishConfig": {
     "access": "public",
