--- a/packages/eslint-config-onpaik/package.json
+++ b/packages/eslint-config-onpaik/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
