--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-transform-modules-amd": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
     "@babel/plugin-proposal-export-default-from":"^7.2.0",
     "@babel/plugin-proposal-do-expressions":"^7.2.0",
@@ -20,7 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "better-npm-run": "^0.1.1",
-    "eslint-config-onpaik": "^1.2.4",
+    "eslint-config-onpaik": "^1.2.5",
     "lerna": "^3.6.0",
     "shelljs": "^0.8.3",
     "mkdirp":"^0.5.1"
