--- a/packages/umi-lib-paik/package.json
+++ b/packages/umi-lib-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-lib-paik",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "A lib for support UMI",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
