--- a/packages/umi-plugin-locale-paik/examples/base/package.json
+++ b/packages/umi-plugin-locale-paik/examples/base/package.json
@@ -3,6 +3,7 @@
     "start": "CLEAR_CONSOLE=none umi dev"
   },
   "dependencies": {
-    "antd": "^3.10.9"
+    "antd": "^3.10.9",
+    "umi":"^2.2.8"
   }
 }
