--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -29,13 +29,24 @@
     "locale"
   ],
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
     "antd": "3.x",
+    "deepmerge": "^3.0.0",
+    "globby": "^8.0.1",
+    "hoist-non-react-statics": "^3.2.1",
     "intl": "^1.2.5",
+    "invariant": "^2.2.4",
     "lodash.groupby": "^4.6.0",
+    "mkdirp": "0.5.1",
     "moment": "2.x",
     "mustache": "^3.0.1",
-    "prop-types": "^15.6.2",
+    "node-opencc": "2.0.1",
+    "path": "^0.12.7",
+    "react": "^16.6.3",
     "react-intl": "^2.7.2",
+    "rimraf": "^2.6.2",
     "umi-utils": "^1.2.1"
   },
   "umiTools": {
