--- a/packages/umi-plugin-react-paik/package.json
+++ b/packages/umi-plugin-react-paik/package.json
@@ -36,7 +36,7 @@
     "umi-plugin-dva": "^1.2.1",
     "umi-plugin-hd": "^1.2.0",
     "umi-plugin-locale": "^2.2.2",
-    "umi-plugin-locale-paik": "^2.3.14",
+    "umi-plugin-locale-paik": "^2.3.15-alpha.0",
     "umi-plugin-polyfills": "^1.2.0",
     "umi-plugin-routes": "^1.0.1",
     "webpack": "4.27.1",
