--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-modules-umd": "^7.2.0",
     "@babel/plugin-proposal-export-default-from":"^7.2.0",
     "@babel/plugin-proposal-do-expressions":"^7.2.0",
+    "@babel/plugin-transform-runtime":"^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
