--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "version": "1.1.2",
+  "version": "1.2.2",
   "name": "umi-lib-paik",
   "private": false,
   "scripts": {
-    "build":"node ./scripts/build.js",
+    "build": "node ./scripts/build.js",
     "publish": "node ./scripts/publish.js",
     "publish:hard": "node ./scripts/publish.js --no-git-tag-version --no-push"
   },
@@ -11,20 +11,20 @@
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-amd": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
-    "@babel/plugin-proposal-export-default-from":"^7.2.0",
-    "@babel/plugin-proposal-do-expressions":"^7.2.0",
-    "@babel/plugin-transform-runtime":"^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "better-npm-run": "^0.1.1",
     "eslint-config-onpaik": "^1.2.5",
     "lerna": "^3.6.0",
-    "shelljs": "^0.8.3",
-    "mkdirp":"^0.5.1"
+    "mkdirp": "^0.5.1",
+    "shelljs": "^0.8.3"
   }
 }
