add browser support

--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -5,6 +5,9 @@
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
   "module": "./es/index.js",
+  "browser": {
+    "./lib/index.js": "./lib/locale.js"
+  },
   "authors": [
     "unpaikon"
   ],
