--- a/packages/umi-plugin-react-paik/package.json
+++ b/packages/umi-plugin-react-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-react-paik",
-  "version": "1.2.16",
+  "version": "1.2.17-alpha.0",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
   "module": "./es/index.js",
@@ -36,7 +36,7 @@
     "umi-plugin-dva": "^1.2.1",
     "umi-plugin-hd": "^1.2.0",
     "umi-plugin-locale": "^2.2.2",
-    "umi-plugin-locale-paik": "^3.0.4",
+    "umi-plugin-locale-paik": "^3.0.5-alpha.0",
     "umi-plugin-polyfills": "^1.2.0",
     "umi-plugin-routes": "^1.0.1",
     "webpack": "4.27.1",
