--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -32,11 +32,11 @@
   ],
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
     "antd": "3.x",
     "deepmerge": "^3.0.0",
-    "globby": "^8.0.1",
+    "globby": "^9.0.0",
     "hoist-non-react-statics": "^3.2.1",
     "intl": "^1.2.5",
     "invariant": "^2.2.4",
@@ -45,11 +45,12 @@
     "moment": "2.x",
     "mustache": "^3.0.1",
     "node-opencc": "2.0.1",
+    "ora": "^3.0.0",
     "path": "^0.12.7",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-intl": "^2.7.2",
-    "rimraf": "^2.6.2",
-    "umi-utils": "^1.2.1"
+    "rimraf": "^2.6.3",
+    "umi-utils": "^1.3.1"
   },
   "umiTools": {
     "browserFiles": [
