--- a/packages/umi-plugin-react-paik/package.json
+++ b/packages/umi-plugin-react-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-react-paik",
-  "version": "1.2.17-aplha.1",
+  "version": "1.2.17",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
   "module": "./es/index.js",
