--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -50,7 +50,8 @@
     "react": "^16.7.0",
     "react-intl": "^2.7.2",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1"
+    "umi-utils": "^1.3.1",
+    "execa":"^1.0.0"
   },
   "umiTools": {
     "browserFiles": [
