--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-locale-paik",
-  "version": "3.0.5",
+  "version": "3.0.6-alpha.0",
   "description": "A umi plugin for provide internationalization function.",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.2.3",
     "antd": "3.x",
     "deepmerge": "^3.0.0",
+    "execa": "^1.0.0",
     "globby": "^9.0.0",
     "hoist-non-react-statics": "^3.2.1",
     "intl": "^1.2.5",
@@ -50,8 +51,7 @@
     "react": "^16.7.0",
     "react-intl": "^2.7.2",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1",
-    "execa":"^1.0.0"
+    "umi-utils": "^1.3.1"
   },
   "umiTools": {
     "browserFiles": [
