--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -51,7 +51,8 @@
     "react": "^16.7.0",
     "react-intl": "^2.8.0",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1"
+    "umi-utils": "^1.3.1",
+    "request":"^2.88.0"
   },
   "umiTools": {
     "browserFiles": [
