--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-locale-paik",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "A umi plugin for provide internationalization function.",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
@@ -50,9 +50,9 @@
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-intl": "^2.8.0",
+    "request": "^2.88.0",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1",
-    "request":"^2.88.0"
+    "umi-utils": "^1.3.1"
   },
   "umiTools": {
     "browserFiles": [
