--- a/packages/eslint-config-onpaik/package.json
+++ b/packages/eslint-config-onpaik/package.json
@@ -19,19 +19,20 @@
   "license": "ISC",
   "dependencies": {
     "babel-eslint": "10.0.1",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-flowtype": "^3.4.1",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.2.1",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react-hooks":"latest",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "lint-staged": "^8.1.1",
-    "prettier": "^1.16.2"
+    "lint-staged": "^8.1.3",
+    "prettier": "^1.16.4"
   },
   "publishConfig": {
     "access": "public",
