--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /packages/umi-plugin-translate-paik
 package-lock.json
 yarn-error.log
-/paik-utils
+/paik-utils/
 *.tgz
 lerna-debug.log
 /packages/umi-plugin-locale-paik/src/utils/withIntl/*
