--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "publish": "node ./scripts/publish.js",
-    "clean":"node ./scripts/clean.js --config ./scripts/clean.config.js",
+    "clean":"node ./scripts/clean.js",
     "copy":"node ./scripts/copy.js",
     "disableLint":"node ./scripts/disableLint.js",
+    "upj":"node ./scripts/updatePackageJson.js",
     "publish:hard": "node ./scripts/publish.js --no-git-tag-version --no-push"
   },
   "devDependencies": {
