--- a/packages/paik-utils/package.json
+++ b/packages/paik-utils/package.json
@@ -1,27 +1,41 @@
 {
-  "name": "paik-utils",
-  "version": "0.0.6",
-  "description": "paik utils",
-  "main": "lib/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/onpaik/umi-lib-paik/tree/master/packages/paik-utils"
-  },
-  "keywords": [
-    "utils",
-    "paik"
-  ],
-  "bugs": {
-    "url": "https://github.com/onpaik/umi-lib-paik/issues"
-  },
-  "files": [
-    "lib",
-    "src"
-  ],
-  "author": "unonpaik",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  }
+	"name": "paik-utils",
+	"version": "0.0.6",
+	"description": "paik utils",
+	"main": "lib/index.js",
+	"jsnext:main": "es/index.js",
+	"module": "es/index.js",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/onpaik/umi-lib-paik/tree/master/packages/paik-utils"
+	},
+	"keywords": [
+		"utils",
+		"paik"
+	],
+	"bugs": {
+		"url": "https://github.com/onpaik/umi-lib-paik/issues"
+	},
+	"files": [
+		"lib",
+		"es",
+		"dist",
+		"change",
+		"common",
+		"compose",
+		"file",
+		"get",
+		"is",
+		"preventDefault",
+		"sort",
+		"time",
+		"url",
+		"validate"
+	],
+	"author": "unonpaik",
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/"
+	}
 }
