--- a/packages/babel-plugin-import-paik/package.json
+++ b/packages/babel-plugin-import-paik/package.json
@@ -26,8 +26,7 @@
 	"dependencies": {
 		"paik-utils":"^0.0.7",
 		"@babel/core":"^7.3.3",
-		"@babel/cli":"^7.2.3",
-		"@babel/helper-module-imports":"^7.0.0"
+		"@babel/cli":"^7.2.3"
 	},
 	"publishConfig": {
 		"access": "public",
