--- a/packages/babel-plugin-import-paik/package.json
+++ b/packages/babel-plugin-import-paik/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "babel-plugin-import-paik",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "babel-plugin-import-paik",
 	"main": "lib/index.js",
 	"scripts": {
@@ -24,9 +24,9 @@
 	"author": "unonpaik",
 	"license": "MIT",
 	"dependencies": {
-		"paik-utils":"^0.0.7",
-		"@babel/core":"^7.3.3",
-		"@babel/cli":"^7.2.3"
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.3.3",
+		"paik-utils": "^0.0.8"
 	},
 	"publishConfig": {
 		"access": "public",
