--- a/packages/babel-plugin-import-paik/package.json
+++ b/packages/babel-plugin-import-paik/package.json
@@ -25,7 +25,9 @@
 	"license": "MIT",
 	"dependencies": {
 		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.3.3",
+		"@babel/core": "^7.3.3"
+	},
+	"devDependencies": {
 		"paik-utils": "^0.0.8"
 	},
 	"publishConfig": {
