--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -23,8 +23,13 @@
   "files": [
     "lib",
     "src",
+    "bin",
+    "scripts",
     "template"
   ],
+  "bin": {
+    "paik-intl": "./bin/paik-intl.js"
+  },
   "keywords": [
     "umi",
     "paik",
@@ -51,7 +56,8 @@
     "react": "^16.8.2",
     "react-intl": "^2.8.0",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1"
+    "umi-utils": "^1.3.1",
+    "signale":"^1.3.0"
   },
   "umiTools": {
     "browserFiles": [
