--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-locale-paik",
-  "version": "3.1.7",
+  "version": "3.1.8-alpha.0",
   "description": "A umi plugin for provide internationalization function.",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
@@ -56,8 +56,8 @@
     "react": "^16.8.2",
     "react-intl": "^2.8.0",
     "rimraf": "^2.6.3",
-    "umi-utils": "^1.3.1",
-    "signale":"^1.3.0"
+    "signale": "^1.3.0",
+    "umi-utils": "^1.3.1"
   },
   "umiTools": {
     "browserFiles": [
