--- a/packages/umi-plugin-react-paik/package.json
+++ b/packages/umi-plugin-react-paik/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-react-paik",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
   "module": "./es/index.js",
@@ -36,7 +36,7 @@
     "umi-plugin-dva": "^1.4.0",
     "umi-plugin-hd": "^1.4.0",
     "umi-plugin-locale": "^2.5.0",
-    "umi-plugin-locale-paik": "^3.1.8-alpha.0",
+    "umi-plugin-locale-paik": "^3.1.8",
     "umi-plugin-polyfills": "^1.3.2",
     "umi-plugin-routes": "^1.0.4",
     "webpack": "4.29.5",
