--- a/packages/babel-plugin-import-paik/package.json
+++ b/packages/babel-plugin-import-paik/package.json
@@ -22,10 +22,10 @@
 		"lib"
 	],
 	"author": "unonpaik",
-	"license": "MIT",
+	"license": "Anti996",
 	"dependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.3.3"
+		"@babel/cli": "^7.4.3",
+		"@babel/core": "^7.4.3"
 	},
 	"devDependencies": {
 		"paik-utils": "^0.0.14"
