--- a/packages/stylelint-config-onpaik/package.json
+++ b/packages/stylelint-config-onpaik/package.json
@@ -12,13 +12,13 @@
     "paik"
   ],
   "author": "unonpaik",
-  "license": "MIT",
+  "license": "Anti996",
   "dependencies": {
     "prettier-stylelint": "^0.4.2",
     "stylelint": "^9.10.1",
     "stylelint-config-idiomatic-order": "^6.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.0.0"
+    "stylelint-order": "^2.2.0"
   },
   "publishConfig": {
     "access": "public",
