--- a/packages/umi-plugin-locale-paik/package.json
+++ b/packages/umi-plugin-locale-paik/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/onpaik/umi-lib-paik/issues"
   },
-  "license": "MIT",
+  "license": "Anti996",
   "files": [
     "lib",
     "bin",
@@ -35,13 +35,13 @@
     "locale"
   ],
   "dependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "antd": "3.x",
     "deepmerge": "^3.2.0",
     "execa": "^1.0.0",
-    "globby": "^9.0.0",
+    "globby": "^9.2.0",
     "hoist-non-react-statics": "^3.3.0",
     "intl": "^1.2.5",
     "invariant": "^2.2.4",
@@ -50,13 +50,13 @@
     "moment": "2.x",
     "mustache": "^3.0.1",
     "node-opencc": "2.0.1",
-    "ora": "^3.1.0",
+    "ora": "^3.4.0",
     "path": "^0.12.7",
-    "react": "^16.8.2",
+    "react": "^16.8.6",
     "react-intl": "^2.8.0",
     "rimraf": "^2.6.3",
-    "signale": "^1.3.0",
-    "umi-utils": "^1.3.1"
+    "signale": "^1.4.0",
+    "umi-utils": "^1.4.0"
   },
   "umiTools": {
     "browserFiles": [
